fix: wrap class add an absolute

--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@
 .slide-wrap{
   width:100%;
   overflow: hidden;
-  position: relative;;
+  position: absolute;
 
 }
 
